--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Don't forget to fill out an application :)<br>
 --Things I will draw--<br>
 - OC's, Anime characters, cute animals, pokemon, mild gore.<br>
 --Things I will not draw--<br>
-- Heavily masculine bodies, Lots of armor, Furries, MLP, Mecha, NSFW (Nudity-Sexual Themes), offensive material.<br><br></a>
+- Heavily masculine bodies, Lots of armor, Furries, MLP, Mecha, offensive material.<br><br></a>
 				
 <a NAME="prices">
 					PRICING<br>
